Fixing alignment issues

--- a/pages/index.scss
+++ b/pages/index.scss
@@ -95,7 +95,7 @@
   z-index: 1;
   background: $bg-light;
   align-items: center;
-  justify-content: end;
+  justify-content: flex-end;
 }
 .frontEndSlash {
   margin-left: auto;
